syntax = "proto3";

package business;

service BusinessService {
    rpc CreateBusiness (Business) returns (Business);
    rpc CreateService (ServiceTypeDef) returns (ServiceTypeDef);
    
}



message Business {
    string id = 1;
    string salon_name = 2;
    repeated string phone_numbers = 3;
    string status = 4;
    repeated Staff staff = 5;
    string location = 6;
}

message Staff {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    repeated string phone_numbers = 4;
    string cost = 5;
    string status = 6;
    string comment_id = 7;
    string business_id = 8;
    string calendar_id = 9;
    string client_id = 10;
    string men_services_id = 11;
    string women_services_id = 12;
}

message MenServices {
    string id = 1;
    bool hair_cut = 2;
    bool beard_cut = 3;
    bool hair_coloring = 4;
    bool special_hair_cut = 5;
    bool beard_coloring = 6;
    bool beard_trim = 7;
    bool beard_shave = 8;
    bool face_shave = 9;
    bool boy_hair_cut = 10;
    string others = 11;
    string client_id = 12;
}

message WomenServices {
    string id = 1;
    bool hair_cut = 2;
    bool hair_coloring = 3;
    bool eyebrow_arching = 4;
    bool special_hair_cut = 5;
    string client_id = 6;
}

message ServiceTypeDef{
    MenServices men_service = 1;
    WomenServices women_service = 2;
}

